adjusted position of warning message to avoid overlap with footer

--- a/styles/Seeding.module.css
+++ b/styles/Seeding.module.css
@@ -740,3 +740,7 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+.carpoolWarning
+{
+  padding-bottom: 100px;
+}
